--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=taetae
-spring.datasource.password=wj001015
+spring.datasource.password=12345678
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
